conteur terminé avec les interfaces du caisier san etat abscence

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ h1, h3
 .post{
     width: calc(33% - 10px);
     overflow: hidden;
-    padding: 10px;
+    padding: 5px;
 }
 .post .titre{
     width: 100%;
@@ -46,15 +46,16 @@ h1, h3
 }
 
 .post-content{
-    background-color: #f9f9f9;
-    margin: 0 20px;
-    padding: 30px;
-    border-radius: 6px;
-    transform: translateY(-35px);
-    transition: .3s ;
+  background-color: #f9f9f9;
+  margin: 0 20px;
+  padding-top: 10px;
+  padding-bottom:15px;
+  border-radius: 6px;
+  transform: translateY(-35px);
+  transition: .3s ;
 }
 .post-content h2{
-    font-size: 16px;
+    font-size: 20px;
     margin-bottom: 10px;
     
 }
