--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,7 @@ h1, h3
 .post-content{
   background-color: #f9f9f9;
   margin: 0 20px;
-  padding-top: 10px;
-  padding-bottom:15px;
+  padding: 5px 25px 10px 25px;
   border-radius: 6px;
   transform: translateY(-35px);
   transition: .3s ;
@@ -59,6 +58,7 @@ h1, h3
     margin-bottom: 10px;
     
 }
+
 .date{
     font-size: 15px;
     margin-top: 10px;
